RESOLVED FIXED182073
Gracefully recover from NetworkProcess crashes in private browsing
https://bugs.webkit.org/show_bug.cgi?id=182073
Summary Gracefully recover from NetworkProcess crashes in private browsing
Alex Christensen
Reported 2018-01-24 16:34:19 PST
Gracefully recover from NetworkProcess crashes in private browsing
Attachments
Patch (16.46 KB, patch)
2018-01-24 16:38 PST, Alex Christensen
ggaren: review+
Alex Christensen
Comment 1 2018-01-24 16:38:13 PST
Geoffrey Garen
Comment 2 2018-01-24 18:03:38 PST
Comment on attachment 332212 [details] Patch r=me
Alex Christensen
Comment 3 2018-01-24 18:36:13 PST
Radar WebKit Bug Importer
Comment 4 2018-01-24 18:39:04 PST
Note You need to log in before you can comment on or make changes to this bug.